--- a/paginationExample/src/main/resources/templates/listbooks.html
+++ b/paginationExample/src/main/resources/templates/listbooks.html
@@ -4,7 +4,7 @@
 
     <link th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" rel="stylesheet"/>
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
-    <title>Book List</title>
+    <title>Books</title>
 </head>
 <body>
 <div class="container">
@@ -14,11 +14,11 @@
     <div class="row">
         <table class="table">
             <tr>
-                <th>id</th>
+             	<th>id</th>
                 <th>Name</th>
                 <th>Number</th>
             </tr>
-            <tr th:each="book : ${bookPage}">
+            <tr th:each="book : ${books}">
                 <td th:text="${book.id}"></td>
                 <td th:text="${book.name}"></td>
                 <td th:text="${book.number}"></td>
@@ -26,27 +26,36 @@
         </table>
     </div>
     <div class="row">
-      
-     <div th:if="${bookPage.totalPages > 0}" class="pagination"
-        th:each="pageNumber : ${pageNumbers}">
-        <a th:href="@{/listBooks(size=${bookPage.size}, page=${pageNumber})}"
-            th:text=${pageNumber}
-            th:class="${pageNumber==bookPage.number + 1} ? active"></a>
+        <div class="form-group col-md-1">
+            <select class="form-control pagination" id="pageSizeSelect">
+                <option th:each="pageSize : ${pageSizes}" th:text="${pageSize}" th:value="${pageSize}"
+                        th:selected="${pageSize} == ${selectedPageSize}"></option>
+            </select>
+        </div>
+        <div th:if="${books.totalPages != 1}" class="form-group col-md-11 pagination-centered">
+            <ul class="pagination">
+                <li th:class="${books.number == 0} ? disabled">
+                    <a class="pageLink" th:href="@{/(pageSize=${selectedPageSize}, page=1)}">&laquo;</a>
+                </li>
+                <li th:class="${books.number == 0} ? disabled">
+                    <a class="pageLink" th:href="@{/(pageSize=${selectedPageSize}, page=${books.number})}">&larr;</a>
+                </li>
+                <li th:class="${books.number == (page - 1)} ? 'active pointer-disabled'"
+                    th:each="page : ${#numbers.sequence(pager.startPage, pager.endPage)}">
+                    <a class="pageLink" th:href="@{/(pageSize=${selectedPageSize}, page=${page})}"
+                       th:text="${page}"></a>
+                </li>
+                <li th:class="${books.number + 1 == books.totalPages} ? disabled">
+                    <a class="pageLink"
+                       th:href="@{/(pageSize=${selectedPageSize}, page=${books.number + 2})}">&rarr;</a>
+                </li>
+                <li th:class="${books.number + 1 == books.totalPages} ? disabled">
+                    <a class="pageLink"
+                       th:href="@{/(pageSize=${selectedPageSize}, page=${books.totalPages})}">&raquo;</a>
+                </li>
+            </ul>
+        </div>
     </div>
-    
-    <div class="list-group">
-    <a class="list-group-item" href="http://www.google.com">
-        <b>Google</b>
-    </a>
-    <a class="list-group-item" href="http://www.stackoverflow.com" target="_blank">
-        <b>Stackoverflow</b>
-    </a>
-    <a class="list-group-item" href="http://www.w3schools.com">
-        <b>W3Schools</b>
-    </a>
-</div>
-   
-</div>
 </div>
 <script th:src="@{/webjars/jquery/1.11.1/jquery.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
